    * 5451 FIX: logwatch: Fixed reclassifying mechanism: Patterns did not apply correctly if they have changed
    * 5417 FIX: Windows: allow whitespace in eventlog event source...
    * 5608 FIX: temperature.include: Fixed device levels handling
    * 5557 FIX: check_mk_agent.aix: Fixed bug in uptime because AIX is not able to interpret ? and + in regexes

    WATO:
    * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias


1.2.8p26:
    Core & Setup:
    * 5038 FIX: Datasource programs: Prevent zombie processes in case of timeouts...
    * 5204 FIX: Host rename: Fixed broken rename of hosts in rrdcached journal...
    * 5205 FIX: Host rename: Fixed broken renaming when new name uses dots...

    Checks & Agents:
    * 5078 FIX: lnx_distro: Detects version and name of Check_MK Appliance correctly
    * 5079 FIX: windows_tasks: Adapted man page; Some OK states were missing
    * 5083 FIX: oracle_locks: Do not discover if data is incomplete...
    * 5089 FIX: citrix_xenapp.ps1: Refactored; now uses powershell commands for Citrix environment instead of WMI objects which caused runtime errors
    * 5091 FIX: Perfometer: Allow zero as maximal value; Fixed unsupported operand type for /: 'float' and 'NoneType'
    * 5093 FIX: dell_poweredge_temp: Fixed device levels handling if they are empty
    * 5095 FIX: "Round trip average" graph: Added warn and crit lines
    * 5096 FIX: mk_oracle_crs: crs_stat command is deprecated since Oracle 11gR2; Now the plugin handles that correctly
    * 4804 FIX: brocade_fcport: Fix limiting discovered ports by operational and physical status...
    * 5110 FIX: appdynamics_memory: Fixed crashing if max. available for heap or non-heap memory is zero
    * 5113 FIX: cifsmounts: Fixed wrong reported error message if user has not right permissions on mount point
    * 5114 FIX: ps, ps.perf: Allow "/" in process name in manual checks